Add nodegit module to download url repo into project dir

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,16 @@
 
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
+#logo {
+    width: 40px;
+    height: auto;
+}
 
-
+#submitBtn {
+    margin-top: 15px;
+}
 
 
 
