--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>NODEpendency</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -40,6 +40,7 @@
 
     <div class="container">
       <!-- Insert the visualization tool here! -->
+      <div id="chart"></div>
     </div>
 
     <hr>
@@ -48,6 +49,38 @@
       <p>&copy;2018 Viz 5 CPSC 410</p>
       <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
+
+    <% if(dependencyData !== null){ %>
+      <script src="js/d3.min.js"></script>
+      <script src="js/dependencyWheel.js"></script>
+      <script>
+        var data = JSON.parse('<%- dependencyData %>');
+        var chart = d3.chart.dependencyWheel();
+        d3.select('#chart').datum(data).call(chart);
+      </script>
+    <% } %>
+    
+    <!-- <script src="js/d3.min.js"></script>
+    <script src="js/dependencyWheel.js"></script>
+
+    <script>
+
+    // Stub data, uncomment for test
+
+    // var data = {
+    //   packageNames: ['Main', 'A', 'B', 'C', 'D', 'E', 'DFDFD'],
+    //   matrix: [[0, 1, 1, 1, 1, 1, 0], // Main depends on A and B
+    //   [0, 0, 1, 1, 0, 1, 0], // A depends on B
+    //   [0, 0, 0, 0, 0, 0, 0],
+    //   [1, 1, 1, 0, 0, 0, 0],
+    //   [0, 0, 0, 1, 0, 1, 0],
+    //   [1, 0, 1, 0, 1, 0, 1],
+    //   [0, 1, 0, 1, 0, 1, 0]] // B doesn't depend on A or Main
+    // };
+
+    var chart = d3.chart.dependencyWheel();
+    d3.select('#chart').datum(data).call(chart);
+    </script> -->
 
     </body>
 </html>
