--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,8 +4,46 @@
    ========================================================================== */
 
 #logo {
-    width: 40px;
-    height: auto;
+    width: 30px;
+    margin-bottom: 5px;
+    margin-right: 8px;
+}
+
+#frontPage {
+    position:relative;
+}
+
+#frontPageAnimation {
+    width: 580px;
+    height: 280px;
+    overflow: hidden;
+    margin-left: 480px;
+}
+
+#frontPageAnimation iframe {
+    margin-top: -160px;
+}
+
+#frontPageWord {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:40px;
+}
+
+#frontPage h1 {
+    line-height: 3.8rem;
+    font-weight: bold;
+    font-size: 4.0rem;
+}
+
+#frontPage h4 {
+    margin-top: 20px;
+}
+
+#forms {
+    width: 90%;
 }
 
 #submitBtn {
@@ -14,6 +52,11 @@
 
 #chart {
     margin-top: 100px;
+    margin-left: -200px;
+}
+
+#freepik {
+    font-size: 0.2rem;
 }
 
 
